--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SoundSketch - Music Collaboration Platform</title>
+    <meta name="description" content="Share demo tracks, manage versions, and get timestamp-specific feedback on your music. Built for musicians who collaborate.">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="SoundSketch - Music Collaboration Platform">
+    <meta property="og:description" content="Share demo tracks, manage versions, and get timestamp-specific feedback on your music.">
+    <meta property="og:image" content="/og-image.svg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="SoundSketch - Music Collaboration Platform">
+    <meta name="twitter:description" content="Share demo tracks, manage versions, and get timestamp-specific feedback on your music.">
+    <meta name="twitter:image" content="/og-image.svg">
+    <meta name="theme-color" content="#141414">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
